--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -584,3 +584,29 @@
 	title = {Exploring historic changes in musical communication: Deconstructing emotional cues in preludes by Bach and Chopin},
 	volume = {50},
 	year = {2022}}
+
+@article{nag2022,
+	title = {On the application of deep learning and multifractal techniques to classify emotions and instruments using Indian Classical Music},
+	author = {Nag, Sayan and Basu, Medha and Sanyal, Shankha and Banerjee, Archi and Ghosh, Dipak},
+	year = {2022},
+	date = {2022},
+	journal = {Physica A: Statistical Mechanics and its Applications},
+	volume = {597},
+	doi = {10.1016/j.physa.2022.127261},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85127732290&doi=10.1016%2fj.physa.2022.127261&partnerID=40&md5=634cc77ee93e9ac834ca0dad8b815119},
+	note = {Type: Article}
+}
+
+@article{chin2018,
+	title = {Predicting the Probability Density Function of Music Emotion Using Emotion Space Mapping},
+	author = {Chin, Yu-Hao and Wang, Jia-Ching and Wang, Ju-Chiang and Yang, Yi-Hsuan},
+	year = {2018},
+	date = {2018},
+	journal = {IEEE Transactions on Affective Computing},
+	pages = {541 {\textendash} 549},
+	volume = {9},
+	number = {4},
+	doi = {10.1109/TAFFC.2016.2628794},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85058048732&doi=10.1109%2fTAFFC.2016.2628794&partnerID=40&md5=a50a624a1dd2a6e53d5920e2499b1aca},
+	note = {Type: Article}
+}
