--- a/studies/bib/extractions.bib
+++ b/studies/bib/extractions.bib
@@ -933,7 +933,8 @@ larized Discriminant Analysis (SCRDA)},
   MODEL_RATE_EMOTION_NAMES = {arousal},
   MODEL_RATE_EMOTION_VALUES = {
   bind_field(
-  'various.logistic regression (l1).dynamics.chinese.1' = c(classification_accuracy.mean = .84,av_class.n = 4), 'various.logistic regression (l1).dynamics.chinese.1' = c(classification_accuracy.mean = .83,av_class.n = 4),
+  'various.logistic regression (l1).dynamics.chinese.1' = c(classification_accuracy.mean = .84,av_class.n = 4), 
+  'various.logistic regression (l2).dynamics.chinese.1' = c(classification_accuracy.mean = .83,av_class.n = 4),
   'various.svm (l1).dynamics.chinese.1' = c(classification_accuracy.mean = .83,av_class.n = 4),
   'various.regularized discriminant analysis.dynamics.chinese.1' = c(classification_accuracy.mean = .83,av_class.n = 4),
   'various.lr.dynamics.chinese.1' = c(classification_accuracy.mean = .8,av_class.n = 4),
