--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -610,3 +610,333 @@
 	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85058048732&doi=10.1109%2fTAFFC.2016.2628794&partnerID=40&md5=a50a624a1dd2a6e53d5920e2499b1aca},
 	note = {Type: Article}
 }
+
+
+@book{hiller_experimental_1979,
+	title = {Experimental {Music}; {Composition} with an electronic computer},
+	publisher = {Greenwood Publishing Group Inc.},
+	author = {Hiller, Lejaren Arthur and Isaacson, Leonard M},
+	year = {1979},
+}
+
+@article{zaripov_cybernetics_1969,
+	title = {Cybernetics and music},
+	journal = {Perspectives of New Music},
+	author = {Zaripov, R Kh and Russell, JGK},
+	year = {1969},
+	note = {Publisher: JSTOR},
+	pages = {115--154},
+}
+
+@book{mozart_musikalisches_1957,
+	title = {Musikalisches {Würfelspiel}},
+	publisher = {B. Schott's Soehne},
+	author = {Mozart, Wolfgang Amadeus},
+	year = {1957},
+}
+
+@article{deutsch_ink-pot_1952,
+	title = {Ink-{Pot} and {Squirt}-{Gun} {Or} '{The} {Art} of {Composing} {Music} in the {New}-{Style}'},
+	volume = {93},
+	number = {1315},
+	journal = {The Musical Times},
+	author = {Deutsch, Otto Erich},
+	year = {1952},
+	note = {Publisher: JSTOR},
+	pages = {401--403},
+}
+
+@inproceedings{katayose_sentiment_1988,
+	title = {Sentiment extraction in music},
+	booktitle = {9th {International} {Conference} on {Pattern} {Recognition}},
+	publisher = {IEEE Computer Society},
+	author = {Katayose, Haruhiro and Imai, Masakazu and Inokuchi, Seiji},
+	year = {1988},
+	pages = {1083--1084},
+}
+
+@inproceedings{fairthorne_towards_1968,
+	title = {Towards information retrieval},
+	publisher = {Archon Books},
+	author = {Fairthorne, Robert A.},
+	year = {1968},
+}
+
+@phdthesis{meyer_emotion_1954,
+	type = {{PhD} {Thesis}},
+	title = {Emotion and meaning in music},
+	school = {The University of Chicago},
+	author = {Meyer, Leonard B},
+	year = {1954},
+}
+
+@book{langer_philosophy_1948,
+	title = {Philosophy in a new key: {A} study in the symbolism of reason, rite, and art},
+	publisher = {New American Library},
+	author = {Langer, Susanne K},
+	year = {1948},
+}
+
+@article{tischler_aesthetic_1956,
+	title = {The {Aesthetic} {Experience}},
+	volume = {17},
+	journal = {The Music Review},
+	author = {Tischler, Hans},
+	year = {1956},
+	pages = {189},
+}
+
+@book{picard_affective_1997,
+	title = {Affective {Computing}},
+	publisher = {MIT Press},
+	author = {Picard, Rosalind},
+	year = {1997},
+}
+
+@inproceedings{marrin_analysis_1998,
+	title = {Analysis of {Affective} {Musical} {Expression} with the {Conductor}'s {Jacket}},
+	booktitle = {{XII} {Colloquium} for {Musical} {Informatics}, {Gorizia}, {Italy}},
+	author = {Marrin, Teresa and Picard, Rosalind},
+	year = {1998},
+	pages = {61--64},
+}
+
+@inproceedings{dabek_new_1998,
+	title = {A new affect-perceiving interface and its application to personalized music selection},
+	booktitle = {Proc. from the 1998 {Workshop} on {Perceptual} {User} {Interfaces}},
+	author = {Dabek, Frank and Healey, Jennifer and Picard, Rosalind},
+	year = {1998},
+}
+
+@inproceedings{friberg_automatic_2002,
+	title = {Automatic real-time extraction of musical expression},
+	booktitle = {International {Computer} {Music} {Conference}, {ICMC} 2002, {Gothenburg}, {Sweden}},
+	author = {Friberg, Anders and Schoonderwaldt, Erwin and Juslin, Patrik N and Bresin, Roberto},
+	year = {2002},
+	pages = {365--367},
+}
+
+@inproceedings{liu_automatic_2003,
+	title = {Automatic {Mood} {Detection} from {Acoustic} {Music} {Data}},
+	booktitle = {Proc. {ISMIR} 2003; 4th {Int}. {Symp}. {Music} {Information} {Retrieval}},
+	author = {Liu, Dan and Lu, Lie and Zhang, Hong-Jiang},
+	month = jan,
+	year = {2003},
+}
+
+@article{lu_automatic_2005,
+	title = {Automatic mood detection and tracking of music audio signals},
+	volume = {14},
+	number = {1},
+	journal = {IEEE Transactions on audio, speech, and language processing},
+	author = {Lu, Lie and Liu, Dan and Zhang, Hong-Jiang},
+	year = {2005},
+	note = {Publisher: IEEE},
+	pages = {5--18},
+}
+
+@article{mandel_support_2006,
+	title = {Support vector machine active learning for music retrieval},
+	volume = {12},
+	number = {1},
+	journal = {Multimedia systems},
+	author = {Mandel, Michael I and Poliner, Graham E and Ellis, Daniel PW},
+	year = {2006},
+	note = {Publisher: Springer},
+	pages = {3--13},
+}
+
+@inproceedings{feng_popular_2003,
+	title = {Popular music retrieval by detecting mood},
+	booktitle = {Proceedings of the 26th annual international {ACM} {SIGIR} conference on {Research} and development in informaion retrieval},
+	author = {Feng, Yazhong and Zhuang, Yueting and Pan, Yunhe},
+	year = {2003},
+	pages = {375--376},
+}
+
+@inproceedings{hu_2007_2008,
+	title = {The 2007 {MIREX} audio mood classification task: {Lessons} learned},
+	booktitle = {Proc. 9th {Int}. {Conf}. {Music} {Inf}. {Retrieval}},
+	author = {Hu, Xiao and Downie, John Stephen and Laurier, Cyril and Bay, Mert and Ehmann, Andreas F.},
+	year = {2008},
+	pages = {462--467},
+}
+
+@article{yang_regression_2008,
+	title = {A regression approach to music emotion recognition},
+	volume = {16},
+	number = {2},
+	journal = {IEEE Transactions on audio, speech, and language processing},
+	author = {Yang, Yi-Hsuan and Lin, Yu-Ching and Su, Ya-Fan and Chen, Homer H},
+	year = {2008},
+	note = {Publisher: IEEE},
+	pages = {448--457},
+}
+
+@inproceedings{celma_foafing_2006,
+	title = {Foafing the music: {Bridging} the semantic gap in music recommendation},
+	booktitle = {International semantic web conference},
+	publisher = {Springer},
+	author = {Celma, Oscar},
+	year = {2006},
+	pages = {927--934},
+}
+
+@inproceedings{wiggins_semantic_2009,
+	title = {Semantic gap?? {Schemantic} schmap‼ {Methodological} considerations in the scientific study of music},
+	booktitle = {2009 11th {IEEE} {International} {Symposium} on {Multimedia}},
+	publisher = {IEEE},
+	author = {Wiggins, Geraint A},
+	year = {2009},
+	pages = {477--482},
+}
+
+@article{downie_music_2008,
+	title = {The music information retrieval evaluation exchange (2005–2007): {A} window into music information retrieval research},
+	volume = {29},
+	number = {4},
+	journal = {Acoustical Science and Technology},
+	author = {Downie, John Stephen},
+	year = {2008},
+	note = {Publisher: Acoustical Society of Japan},
+	pages = {247--255},
+}
+
+@article{zhang_bridge_2016,
+	title = {Bridge the semantic gap between pop music acoustic feature and emotion: {Build} an interpretable model},
+	volume = {208},
+	journal = {Neurocomputing},
+	author = {Zhang, JiangLong and Huang, XiangLin and Yang, Lifang and Nie, Liqiang},
+	year = {2016},
+	note = {Publisher: Elsevier},
+	pages = {333--341},
+}
+
+@article{kassler1966toward,
+  title={Toward musical information retrieval},
+  author={Kassler, Michael},
+  journal={Perspectives of New Music},
+  pages={59--67},
+  year={1966},
+  publisher={JSTOR}
+}
+
+@article{mendel1969some,
+  title={Some preliminary attempts at computer-assisted style analysis in music},
+  author={Mendel, Arthur},
+  journal={Computers and the Humanities},
+  pages={41--52},
+  year={1969},
+  publisher={JSTOR}
+}
+
+@article{panda2020audio,
+  title={Audio features for music emotion recognition: a survey},
+  author={Panda, Renato and Malheiro, Ricardo and Paiva, Rui Pedro},
+  journal={IEEE Transactions on Affective Computing},
+  volume={14},
+  number={1},
+  pages={68--88},
+  year={2020},
+  publisher={IEEE}
+}
+
+@inproceedings{grekow2016music,
+  title={Music emotion maps in arousal-valence space},
+  author={Grekow, Jacek},
+  booktitle={Computer Information Systems and Industrial Management: 15th IFIP TC8 International Conference, CISIM 2016, Vilnius, Lithuania, September 14-16, 2016, Proceedings 15},
+  pages={697--706},
+  year={2016},
+  organization={Springer}
+}
+
+@article{yang2018review,
+  title={Review of data features-based music emotion recognition methods},
+  author={Yang, Xinyu and Dong, Yizhuo and Li, Juan},
+  journal={Multimedia systems},
+  volume={24},
+  pages={365--389},
+  year={2018},
+  publisher={Springer}
+}
+
+@inproceedings{bai2016dimensional,
+  title={Dimensional music emotion recognition by valence-arousal regression},
+  author={Bai, Junjie and Peng, Jun and Shi, Jinliang and Tang, Dedong and Wu, Ying and Li, Jianqing and Luo, Kan},
+  booktitle={2016 IEEE 15th International Conference on Cognitive Informatics \& Cognitive Computing (ICCI* CC)},
+  pages={42--49},
+  year={2016},
+  organization={IEEE}
+}
+
+@article{coutinho2013psychoacoustic,
+  title={Psychoacoustic cues to emotion in speech prosody and music},
+  author={Coutinho, Eduardo and Dibben, Nicola},
+  journal={Cognition \& emotion},
+  volume={27},
+  number={4},
+  pages={658--684},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{eerola2009prediction,
+  title={Prediction of Multidimensional Emotional Ratings in Music from Audio Using Multivariate Regression Models.},
+  author={Eerola, Tuomas and Lartillot, Olivier and Toiviainen, Petri},
+  booktitle={Ismir},
+  pages={621--626},
+  year={2009}
+}
+
+@article{grekow2018audio,
+  title={Audio features dedicated to the detection and tracking of arousal and valence in musical compositions},
+  author={Grekow, Jacek},
+  journal={Journal of Information and Telecommunication},
+  volume={2},
+  number={3},
+  pages={322--333},
+  year={2018},
+  publisher={Taylor \& Francis}
+}
+
+@article{park2017representation,
+  title={Representation learning using artist labels for audio classification tasks},
+  author={Park, Jiyoung and Lee, Jongpil and Nam, Juhan and Park, Jangyeon and Ha, Jung-Woo},
+  journal={The 13th Music Information Retrieval Evaluation eXchange, MIREX},
+  year={2017}
+}
+
+@inproceedings{yang2007music,
+  title={Music emotion recognition: The role of individuality},
+  author={Yang, Yi-Hsuan and Su, Ya-Fan and Lin, Yu-Ching and Chen, Homer H},
+  booktitle={Proceedings of the international workshop on Human-centered multimedia},
+  pages={13--22},
+  year={2007}
+}
+
+@inproceedings{chowdhury2021perceived,
+  title={On perceived emotion in expressive piano performance: Further experimental evidence for the relevance of mid-level perceptual features},
+  author={Chowdhury, Shreyan and Widmer, Gerhard},
+  booktitle={International Society for Music Information Retrieval Conference (ISMIR 2023)},
+  year={2021}
+}
+
+
+
+@article{zaripov1969,
+	title = {Cybernetics and music},
+	author = {Zaripov, R Kh and Russell, JGK},
+	year = {1969},
+	date = {1969},
+	journal = {Perspectives of New Music},
+	pages = {115{\textendash}154},
+	note = {Publisher: JSTOR}
+}
+
+@inproceedings{fairthorne1968,
+	title = {Towards information retrieval},
+	author = {Fairthorne, Robert A.},
+	year = {1968},
+	date = {1968},
+	publisher = {Archon Books}
+}
